--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/">
+    >
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,12 +22,13 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="send"
         android:id="@+id/btn1"
         android:layout_below="@+id/edt1"
         android:layout_alignRight="@+id/edt1"
         android:layout_alignEnd="@+id/edt1"
-        android:layout_marginTop="42dp" />
+        android:layout_marginTop="42dp"
+        android:onClick="&lt;unset>" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -46,5 +47,15 @@
         android:layout_marginTop="26dp"
         android:layout_alignRight="@+id/btn1"
         android:layout_alignEnd="@+id/btn1" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="menu"
+        android:id="@+id/button"
+        android:layout_above="@+id/listView"
+        android:layout_toLeftOf="@+id/btn1"
+        android:layout_toStartOf="@+id/btn1"
+        android:onClick="goToOrderActivity" />
 
 </RelativeLayout>
